# swaylay

./: .gitignore  LICENSE  README.md  ipc-client.c  main.c  meson.build  stringop.c
include/: ipc-client.h  ipc.h  stringop.h
